# CarlBot

./: Cargo.toml
src/: main.rs  user.rs  user_lookup.rs
src/commands/: directions.rs  mod.rs  user_composition.rs  user_lookup.rs
src/interactions/: mod.rs  user_lookup.rs
