[package]
name = "discord_application"
version = "0.1.0"
authors = ["kangarooCoder <ksbilodeau07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
serde_json = "1.0.59"
serde = "1.0.117"
serenity = {version = "*", features = ["unstable_discord_api", "collector"]}
tokio = {version = "1.3.0", features = ["macros", "rt-multi-thread"]}
