[package]
name = "carl_bot"
version = "0.1.0"
authors = ["ksbilodeau <ksbilodeau07@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
reqwest = "0.11.9"
serde_json = "1.0.79"
serde = "1.0.136"
serenity = { version = "0.10.10", features = ["unstable_discord_api", "collector"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
url_encoded_data = "0.6.1"

